--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<title>StampWithYou</title>
-		<base href="/" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=K2D:wght@200&display=swap"
-			rel="stylesheet"
-		/>
-	</head>
-	<body>
-		<app-root></app-root>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<title>Stampwithyou</title>
+	<base href="/" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="icon" type="image/x-icon" href="assets/logo-mini.png" />
+	<link href="https://fonts.googleapis.com/css2?family=K2D:wght@200&amp;display=swap" rel="stylesheet" />
+	<!-- Place favicon.ico in the root directory -->
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/logos/logo.png" />
+</head>
+
+<body>
+	<app-root></app-root>
+
+</body>
+
 </html>
