--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>Stampwithyou</title>
+		<base href="/" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/x-icon" href="assets/logo-mini.png" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=K2D:wght@200&amp;display=swap"
+			rel="stylesheet"
+		/>
+		<!-- Place favicon.ico in the root directory -->
+		<link
+			rel="shortcut icon"
+			type="image/x-icon"
+			href="assets/images/logos/logo.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="assets/icons/manifest/icon-192x192.png"
+		/>
+		<!-- Google Tag Manager -->
+		<script>
+			(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-MBQHJLB");
+		</script>
+		<!-- End Google Tag Manager -->
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<title>Stampwithyou</title>
-	<base href="/" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" type="image/x-icon" href="assets/logo-mini.png" />
-	<link href="https://fonts.googleapis.com/css2?family=K2D:wght@200&amp;display=swap" rel="stylesheet" />
-	<!-- Place favicon.ico in the root directory -->
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/logos/logo.png" />
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/manifest/icon-192x192.png">
-</head>
-
-<body>
-	<app-root></app-root>
-</body>
-
+	<body>
+		<app-root></app-root>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-MBQHJLB"
+				height="0"
+				width="0"
+				style="display: none; visibility: hidden"
+			></iframe
+		></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+	</body>
 </html>
