--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Stampwithyou</title>
+		<title>ประวัติแสตมป์ | กิตติพันธ์ นิลประกอบกุล</title>
+
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="assets/logo-mini.png" />
