--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
 
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="description"
+			content="แสตมป์ เกิดและโตที่ขลบุรี จบตรี วิศวะคอม จุฬาฯ ปัจจุบัน เป็น fullstack web developer"
+		/>
+		<meta
+			name="keywords"
+			content="แสตมป์, stamp, programmer, developer, fullstack"
+		/>
+		<meta name="author" content="Kittiphan Nilprakobkul" />
+
 		<link rel="icon" type="image/x-icon" href="assets/logo-mini.png" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=K2D:wght@200&amp;display=swap"
