--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
 			name="description"
-			content="แสตมป์ เกิดและโตที่ขลบุรี จบตรี วิศวะคอม จุฬาฯ ปัจจุบัน เป็น fullstack web developer"
+			content="แสตมป์ เกิดและโตที่ชลบุรี จบตรี วิศวะคอม จุฬาฯ ปัจจุบัน เป็น full stack web developer"
 		/>
 		<meta
 			name="keywords"
